updated evilMonkeys - moving Sprite on Screen

--- a/evilMonkeys/evilMonkeys/evilMonkeys.vcxproj
+++ b/evilMonkeys/evilMonkeys/evilMonkeys.vcxproj
@@ -77,10 +77,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="drawEngine.cpp" />
     <ClCompile Include="game.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="drawEngine.h" />
     <ClInclude Include="game.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
